--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4.19", features = ["serde"] }
 log-mdc = "0.1.0"
 anyhow = "1.0.32"
 structopt = "0.3.20"
+tokio = { version = "1", features = ["full"] }
